# modelgauge

./: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  mypy.ini  publish_all.py  pyproject.toml  tox.ini
.github/: failed-scheduled-issue.md
.github/workflows/: python-app.yml  scheduled-tests.yml  test-scheduled-tests.yml
demo_plugin/: README.md
docs/: design_philosophy.md  dev_quick_start.md  docker.md  plugins.md  prompt_response_tests.md  publishing.md  tutorial.md  tutorial_suts.md  tutorial_tests.md  user_quick_start.md
docs/API/: annotator.md
helm_ports/: pyproject.toml
modelgauge/: annotation_pipeline.py  annotator.py  annotator_registry.py  annotator_set.py  annotator_test_runner.py  api_server.py  batch_test_runner.py  caching.py  command_line.py  default_annotator_set.py  dependency_helper.py  external_data.py  general.py  main.py  pipeline.py  pipeline_runner.py  private_ensemble_annotator_set.py  prompt_formatting.py  prompt_pipeline.py  prompt_runner.py  records.py  safety_model_prompts.py  secret_values.py  single_turn_prompt_response.py  sut.py  sut_capabilities.py
modelgauge/annotators/: gemma_2_9b_instruct_annotator.py  llama_3_70b_chat_annotator.py  llama_guard_annotator.py  local_lg2_lora_annotator.py
modelgauge/suts/: together_client.py
modelgauge/tests/: safe_demo.py  safe_v1.py
newhelm/: aggregations.py  annotation.py  base_annotator.py  base_test.py  benchmark.py  cache_helper.py  caching.py  command_line.py  config.py  constants.py  credentials.py  data_packing_test.py  demo_loading_benchmark.py  demo_loading_tests.py  demo_tests_and_suts.py  dependency_helper.py  dependency_helper_test.py  dependency_injection.py  ephemeral_secrets.py  external_data.py  general.py  general_test.py  huggingface_client.py  init_hooks.py  instance.py  instance_factory.py  interaction_annotator.py  journal.py  load_plugins.py  main.py  metric.py  placeholders.py  prompt.py  prompt_formatting.py  record_init.py  records.py  runner.py  secret_values.py  secrets.py  secrets_registry.py  (+11 more)
newhelm/config_templates/: secrets.toml
newhelm/datasets/: bbq_dataset.py
newhelm/example_importers/: bbq_example_importer.py  example_importer.py
newhelm/runners/: prefect_runner.py  prefect_runner_test.py  serial_runner.py  serial_runner_test.py  simple_benchmark_runner.py  simple_benchmark_runner_cli.py  simple_test_runner.py  simple_test_runner_cli.py
newhelm/schema/: instance.py  instance_test.py  item.py  item_test.py  prompt.py  prompt_test.py  test_config.py  test_config_test.py  traceable_object_test.py
newhelm/scripts/: dependency_helper_demo.py
newhelm/suts/: kurtsut.py
plugins/ensemble/: column_converter.py  pyproject.toml
plugins/huggingface/: pyproject.toml
plugins/modeltune_teacher_models/: README.md  micro.csv  pyproject.toml
plugins/modeltune_teacher_models/modelgauge/: safety_model_constants.py  safety_model_response.py
plugins/modeltune_teacher_models/modelgauge/annotators/: llama_guard_2_lora_annotator.py  prompt_engineered_annotator.py
plugins/modeltune_teacher_models/tests/: test_utils.py
plugins/safety_models/: README.md  pyproject.toml
plugins/safety_models/modelgauge/: annotator_test.py  annotator_test_runner.py  column_converter.py  interaction_annotation.py  safety_eval_context.py  safety_model_constants.py  safety_model_measurements.py  safety_model_prompts.py  safety_model_response.py  safety_model_test_utils.py  safety_model_utils.py
plugins/safety_models/modelgauge/annotators/: llama_3_70b_chat_annotator.py  llama_guard_2_annotator.py
plugins/safety_models/modelgauge/suts/: llamaguard2_sut.py
plugins/safety_models/modelgauge/tests/: chat_safety_model_test.py  eval_model_test.py  safety_model_chat_test.py  safety_model_llama_guard_2_test.py  safety_model_test.py
plugins/safety_models/tests/: fake_annotator_test.py  test_annotator_runner.py  test_llama_3_70b_chat_annotator.py
tests/: fake_annotator.py  fake_secrets.py  fake_sut.py  fake_test.py  test_annotation_pipeline.py  test_api_server.py  test_batch_test_runner.py  test_cache.py  test_caching.py  test_cli.py  test_cli.sh  test_config.py  test_data_packing.py  test_default_annotator_set.py  test_dependency_helper.py  test_external_data.py  test_general.py  test_instance_factory.py  test_metaclass.py  test_multiple_choice_questions.py  test_notebook.ipynb  test_pipeline.py  test_private_ensemble_annotator_set.py  test_prompt_formatting.py  test_prompt_pipeline.py  test_prompt_runner.py  test_record_init.py  test_records.py  test_safe.py  test_secret_values.py  test_secrets_registry.py  test_serialization.py  test_simple_safety_tests.py  test_simple_test_runner.py  test_sut_decorator.py  test_test_decorator.py  test_test_specification.py
(+114 files in other folders)
