[tool.poetry]
name = "newhelm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
dacite = ">=1.6.0,<1.7.0"
mmlu = {path = "mmlu", optional = true, develop = true}
helm_ports = {path = "helm_ports", optional = true, develop = true}
ridiculous_benchmark = {path = "ridiculous_benchmark", optional = true, develop = true}

[tool.poetry.group.dev.dependencies]
pytest-datafiles = "^3.0.0"
pytest = "^7.4.3"
mypy = "^1.7.1"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
all_supported_tests = ["mmlu", "helm_ports"]
all_supported_benchmarks = ["ridiculous_benchmark"]
