[tool.poetry]
name = "newhelm"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
zstandard = ">=0.18.0,<0.19.0"
tqdm = ">=4.66.1"
types-tqdm = "^4.66.0.0"
pydantic = "^2.6.0"
demo_plugin = {version = "0.1.0", optional = true}
standard_tests = {version = "0.1.1", optional = true}
newhelm_openai = {version = "0.1.0", optional = true}
newhelm_together = {version = "0.1.0", optional = true}
newhelm_huggingface = {version = "0.1.0", optional = true}
perspective_api = {version = "0.1.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest-datafiles = "^3.0.0"
pytest = "^7.4.3"
mypy = "^1.7.1"
black = "^23.11.0"
pytest-mock = "^3.12.0"

[tool.mypy]
# Using namespace packages to do plugins requires us not to have __init__.py files.
# However, by default mypy uses those to map file paths to modules. This override fixes that.
# https://mypy.readthedocs.io/en/stable/config_file.html#confval-explicit_package_bases
explicit_package_bases = true
mypy_path = "., demo_plugin, plugins/standard_tests, plugins/openai, plugins/huggingface, plugins/perspective_api, plugins/together"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
demo = ["demo_plugin"]
standard_tests = ["standard_tests"]
openai = ["newhelm_openai"]
together = ["newhelm_together"]
huggingface = ["newhelm_huggingface"]
perspective_api = ["perspective_api"]
all_plugins = ["demo_plugin", "newhelm_openai", "newhelm_huggingface", "standard_tests", "perspective_api", "newhelm_together"]

[[tool.poetry.source]]
name = "mlcommons"
url = "https://us-central1-python.pkg.dev/ai-safety-dev/aisafety-pypi/simple"
priority = "primary"